--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -23,6 +23,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0px 200px;
 }
 
 .nav-title {
@@ -46,4 +47,53 @@ nav li {
 nav a {
     text-decoration: none;
     color: #474747;
+}
+
+/* header styles */
+.header {
+    background-color: #FFF8F3;
+    background-image: url("../images/header_bg.png");
+    background-repeat: no-repeat;
+    background-position: bottom right;
+
+}
+
+.banner {
+    padding: 30px 30px 0px 150px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.banner-content {
+    width: 585px;
+
+}
+
+.banner .profile-pic {
+    width: 584px;
+    height: 676px;
+}
+
+.banner-greeting {
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0px;
+}
+
+.banner-title {
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+.banner-description{
+    margin-top: 20pxn;
+    margin-bottom: 30px;
+}
+
+.header-btn{
+    margin-right: 30px;
+    margin-top: 0px;
 }
