--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -18,6 +18,19 @@ body {
     padding: 15px 35px;
 }
 
+.section-title{
+    color: #181818;
+text-align: center;
+font-size: 35px;
+font-weight: 700;
+}
+
+.section-description {
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+}
+
 /* nav related styles */
 nav {
     display: flex;
@@ -55,6 +68,7 @@ nav a {
     background-image: url("../images/header_bg.png");
     background-repeat: no-repeat;
     background-position: bottom right;
+    \
 
 }
 
@@ -88,12 +102,22 @@ nav a {
     margin-bottom: 20px;
 }
 
-.banner-description{
+.banner-description {
     margin-top: 20pxn;
     margin-bottom: 30px;
 }
 
-.header-btn{
+.header-btn {
     margin-right: 30px;
     margin-top: 0px;
+}
+
+/* main section styles */
+
+/* about section styles */
+.about {
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px 0;
 }
