--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -18,11 +18,11 @@ body {
     padding: 15px 35px;
 }
 
-.section-title{
+.section-title {
     color: #181818;
-text-align: center;
-font-size: 35px;
-font-weight: 700;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
 }
 
 .section-description {
@@ -113,11 +113,38 @@ nav a {
 }
 
 /* main section styles */
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+}
 
 /* about section styles */
 .about {
     padding: 130px;
     border-radius: 10px;
     background: #FFF8F3;
-    margin: 130px 0;
+    margin: 130px 0 0;
+}
+
+.about-info-container {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 30px;
+}
+
+.about-info {
+    text-align: center;
+}
+
+.info-title {
+    color: #474747;
+    font-size: 20px;
+    margin-bottom: 0px;
+}
+
+.info-description {
+    margin-top: 10px;
+    color: var #474747;
+    font-size: 20px;
+    font-weight: 700;
 }
