--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -156,9 +156,12 @@ section {
 
 .skills-container {
     display: flex;
-    margin-top: 50px;
     gap: 24px;
 
+}
+
+#what-i-do-description{
+    padding: 0px 150px 50px;
 }
 
 .skill {
@@ -177,4 +180,61 @@ section {
 
 .skill-description {
     color: #757575;
+}
+
+/* Resume Styles */
+
+.resume-content{
+    display: flex;
+    gap: 24px;
+}
+.resume-item{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.resume .title{
+    font-weight: 700;
+    font-size: 25px;
+    color: #474747;
+    margin-bottom: 10px;
+}
+.resume .sub-title{
+    color: #757575;
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+.resume .description{
+    color: #757575;
+}
+
+.resume-button{
+    margin-top: 50px;
+    text-align: center;
+}
+
+/* contact styles */
+.contact{
+    display: flex;
+    gap: 100px;
+    background: #FFF8F3;
+    padding: 130px 200px;
+}
+.contact .section-title{
+    text-align: left;
+}
+
+.contact input[type="text"], input[type="email"], textarea{
+    margin-bottom: 24px;
+    border: 0;
+    width: 100%;
+    padding: 18px 30px;
+}
+
+input{
+    height: 64px;
+}
+
+.contact a{
+    text-decoration: none;
 }
